--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -41,8 +41,12 @@
             <option>-Select Country-</option>
             <option>Test</option>
           </select>
-          <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
-          <input type="checkbox" id="check">
+          <div class="page-header__checkbox">
+            <input type="checkbox" id="check">
+            <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
+          </div>
+          <input type="submit" value="Register Now">
+          <p>training involves significant risk of loss</p>
         </form>
       </div>
     </div>
