--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -15,6 +15,18 @@ body {
   justify-content: flex-end;
   margin-top: 40px; }
 
+.page-header__checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  margin-bottom: 30px; }
+
 form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -28,7 +40,7 @@ form {
   border-radius: 10px;
   border: 3px solid #070055; }
 
-form input {
+input {
   width: 350px;
   height: 40px;
   margin-bottom: 15px;
@@ -37,7 +49,35 @@ form input {
   font-size: 18px;
   border-radius: 10px;
   border: none;
-  background: black; }
+  background: rgba(0, 0, 0, 0.9);
+  outline: none; }
+
+input[type="checkbox"] {
+  width: 20px;
+  margin: 0;
+  cursor: pointer; }
+
+input[type="submit"] {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  color: #070055;
+  font-size: 18px;
+  text-transform: uppercase;
+  background: rgba(255, 255, 255, 0.6);
+  border: 2px solid #070055;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+
+input[type="submit"]:hover {
+  color: #fff;
+  background: #070055;
+  border: 2px solid #070055; }
+
+label {
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer; }
 
 input::-webkit-input-placeholder {
   color: #fff;
@@ -58,6 +98,19 @@ input::placeholder {
   color: #fff;
   font-size: 16px;
   text-transform: uppercase; }
+
+select {
+  height: 40px;
+  padding: 0 20px;
+  margin-bottom: 15px;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  outline: none; }
+
+form p {
+  text-align: center; }
 
 .page-header {
   min-height: 730px;
