--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -51,5 +51,17 @@
       </div>
     </div>
   </header>
+  <section class="trade">
+    <div class="container">
+      <div class="trade__flex">
+        <div class="trade__left-column">
+          Trade Cryptocurrencies<br>With BDSwiss
+        </div>
+        <div class="trade__right-column">
+          BDSwiss offers investors the<br>opportunity to trade multiple crypto<br>currencies against the euro and the<br>US dollar on a 24/7 basis.
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
