--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -63,5 +63,14 @@
       </div>
     </div>
   </section>
+  <section class="edge">
+    <div class="container">
+      <div class="edge__flex">
+        <div class="edge__box">
+          Read More
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
