--- a/assets/templates/enalotto/css/style.css
+++ b/assets/templates/enalotto/css/style.css
@@ -1,4 +1,5 @@
 body {
+  min-width: 320px;
   margin: 0;
   font-family: 'Open Sans', sans-serif; }
 
@@ -44,6 +45,36 @@ body {
     .page-header__nav-list a:hover {
       background: -webkit-gradient(linear, right top, left top, from(rgba(141, 198, 63, 0)), to(#8dc63f));
       background: linear-gradient(-90deg, rgba(141, 198, 63, 0) 0%, #8dc63f 100%); }
+
+@media only screen and (max-width: 992px) {
+  .container {
+    width: 95%; } }
+
+@media only screen and (max-width: 768px) {
+  .page-header__nav-list a {
+    padding: 15px 2px; }
+  .container {
+    width: 97%; }
+  .page-header__nav {
+    width: 100%; }
+  .page-header__main-nav {
+    padding-left: 30px; }
+  .page-header__nav-list {
+    font-size: 14px; } }
+
+@media only screen and (max-width: 480px) {
+  .page-header__main-nav {
+    padding-left: 15px; }
+  .page-header__nav-list {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    font-size: 12px; }
+  .page-header__nav-list a {
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .page-header__nav-list a:hover {
+    color: #106800;
+    background: none; } }
 
 .page-main__flex {
   margin-top: 10px; }
@@ -139,3 +170,24 @@ body {
   margin-right: 15px;
   color: #fff;
   text-decoration: none; }
+
+@media only screen and (max-width: 992px) {
+  .page-footer__nav-item {
+    font-size: 15px; } }
+
+@media only screen and (max-width: 768px) {
+  .page-footer__nav-item {
+    font-size: 13px; }
+  .page-footer__nav-item a {
+    margin-right: 5px; } }
+
+@media only screen and (max-width: 480px) {
+  .page-footer__nav-list {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .page-footer__nav-item a {
+    margin-right: 20px; } }
+
+@media only screen and (max-width: 320px) {
+  body {
+    background: black; } }
