--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -67,7 +67,19 @@
     <div class="container">
       <div class="edge__flex">
         <div class="edge__box">
-          Read More
+          
+        </div>
+        <div class="edge__box">
+          
+        </div>
+        <div class="edge__box">
+          
+        </div>
+        <div class="edge__box">
+          
+        </div>
+        <div class="edge__box">
+          
         </div>
       </div>
     </div>
