--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -188,3 +188,17 @@ form p {
 .trade__right-column {
   margin-top: 20px;
   font-size: 25px; }
+
+.edge {
+  min-height: 245px; }
+
+.edge__flex {
+  min-height: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background: url("../img/edge.png") no-repeat top;
+  margin-top: 80px; }
