--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -84,5 +84,47 @@
       </div>
     </div>
   </section>
+  <section class="news">
+    <div class="container">
+      <div class="news__flex">
+        <div class="news__left-column">
+          <div class="news__left-column-first">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+          <div class="news__left-column-second">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+        </div>
+        <div class="news__middle-column">
+          <div class="news__middle-column-first">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+          <div class="news__middle-column-second">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+        </div>
+        <div class="news__right-column">
+          <div class="news__right-column-first">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+          <div class="news__right-column-second">
+            <b></b>
+            <p></p>
+            <a href="#"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
