--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -20,7 +20,7 @@
                 <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic">
               </a>
             </div>
-            <div class="page-header__main-navs">
+            <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="#">Login</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
