--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -89,41 +89,43 @@
       <div class="news__flex">
         <div class="news__left-column">
           <div class="news__left-column-first">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
+            <b>NEWS</b>
+            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first protocolSatoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol</p>
+            <a href="#">Read More</a>
           </div>
           <div class="news__left-column-second">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
+            <b>LIVE CHAT</b>
+            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer.</p>
+            <a href="#">Read More</a>
           </div>
         </div>
         <div class="news__middle-column">
           <div class="news__middle-column-first">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
+            <b>CURRENT NEWS</b>
+            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first</p>
+            <a href="#">Read More</a>
           </div>
           <div class="news__middle-column-second">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
+            <b>LIVE CHAT</b>
+            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Na Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first kamoto publishes his idea to create the first</p>
+            <a href="#">Read More</a>
           </div>
         </div>
         <div class="news__right-column">
           <div class="news__right-column-first">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
-          </div>
-          <div class="news__right-column-second">
-            <b></b>
-            <p></p>
-            <a href="#"></a>
-          </div>
+            <b>NEWS</b>
+            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first protocolSatoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peeused a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolr, and open Satoshi Nakamoto publishes his idea to create the first cryptocurre</p>
+            <a href="#">Read More</a>
+          </div>  
         </div>
       </div>
+    </div>
+  </section>
+  <section class="crypto">
+    <div class="container">
+      <h1></h1>
+      <p></p>
+      <a href=""></a>
     </div>
   </section>
 </body>
