begin crypto block

--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -122,10 +122,12 @@
     </div>
   </section>
   <section class="crypto">
-    <div class="container">
-      <h1></h1>
-      <p></p>
-      <a href=""></a>
+    <div class="container container--crypto">
+      <div class="crypto__flex">
+        <h1>A cryptobank for everyone</h1>
+        <p>In 8 years’ time, the crypto-economy will exceed 1и trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
+        <a href="#">Create Account</a>
+      </div>
     </div>
   </section>
 </body>
