--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -242,3 +242,42 @@ form p {
 .news__left-column-first,
 .news__middle-column-first {
   margin-bottom: 50px; }
+
+.crypto {
+  min-height: 635px;
+  background: #000 url("../img/crypto-bg.png") no-repeat center;
+  background-size: cover; }
+  .crypto h1 {
+    padding-top: 90px;
+    margin-top: 0;
+    color: #fff;
+    font-size: 60px;
+    text-align: center;
+    text-transform: uppercase; }
+  .crypto p {
+    -ms-flex-item-align: end;
+    align-self: flex-end;
+    width: 75%;
+    color: #fff;
+    font-size: 25px;
+    text-align: right;
+    text-transform: uppercase; }
+  .crypto a {
+    -ms-flex-item-align: end;
+    align-self: flex-end;
+    color: #000;
+    background: #00ffff;
+    text-decoration: none;
+    text-transform: uppercase; }
+
+.container--crypto {
+  width: 820px; }
+
+.crypto__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
