--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -130,5 +130,13 @@
       </div>
     </div>
   </section>
+  <section class="trading">
+    <div class="container">
+      <div class="trading__flex">
+        <h2></h2>
+        <p></p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
