--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -245,13 +245,16 @@ form p {
 
 .crypto {
   min-height: 635px;
-  background: #000 url("../img/crypto-bg.png") no-repeat center;
-  background-size: cover; }
+  background: #000 url("../img/crypto-bg.png") no-repeat bottom;
+  background-size: cover;
+  border-bottom: 10px solid #e94444; }
   .crypto h1 {
-    padding-top: 90px;
-    margin-top: 0;
+    padding: 10px 0;
+    margin-top: 90px;
     color: #fff;
     font-size: 60px;
+    background: #000;
+    border-radius: 10px;
     text-align: center;
     text-transform: uppercase; }
   .crypto p {
@@ -265,13 +268,25 @@ form p {
   .crypto a {
     -ms-flex-item-align: end;
     align-self: flex-end;
+    padding: 10px 60px;
+    margin-top: 70px;
     color: #000;
+    font-size: 25px;
+    font-weight: bold;
     background: #00ffff;
+    border: 1px solid #00ffff;
+    border-radius: 10px;
     text-decoration: none;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .crypto a:hover {
+      color: #00ffff;
+      background: #000;
+      border: 1px solid #00ffff; }
 
 .container--crypto {
-  width: 820px; }
+  width: 980px; }
 
 .crypto__flex {
   display: -webkit-box;
