add trading, coin, crypto

--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -131,12 +131,16 @@
     </div>
   </section>
   <section class="trading">
-    <div class="container">
+    <div class="container container--trading">
       <div class="trading__flex">
-        <h2></h2>
-        <p></p>
+        <h2>MULTIPLATFORM TRADING</h2>
+        <p>When trading Cryptocurrencies with BDSwiss you are increase or decrease in value against another currencyCryptocurrencies with BDSwiss you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
       </div>
     </div>
+    <div class="trading__coin"></div>
+  </section>
+  <section class="coin">
+    
   </section>
 </body>
 </html>
