--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -244,10 +244,20 @@ form p {
   margin-bottom: 50px; }
 
 .crypto {
+  position: relative;
   min-height: 635px;
   background: #000 url("../img/crypto-bg.png") no-repeat bottom;
   background-size: cover;
   border-bottom: 10px solid #e94444; }
+  .crypto::after {
+    content: "";
+    width: 600px;
+    height: 830px;
+    top: 250px;
+    left: 100px;
+    position: absolute;
+    background: url("../img/phone.png") no-repeat;
+    background-size: cover; }
   .crypto h1 {
     padding: 10px 0;
     margin-top: 90px;
@@ -296,3 +306,42 @@ form p {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+
+.trading {
+  min-height: 600px;
+  background: url("../img/trading-bg.png") no-repeat top;
+  background-size: cover; }
+  .trading h2 {
+    margin-top: 60px;
+    font-size: 40px;
+    font-weight: bold;
+    font-style: italic; }
+  .trading p {
+    -ms-flex-item-align: end;
+    align-self: flex-end;
+    width: 75%;
+    color: #fff;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    text-align: right; }
+
+.trading__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end; }
+
+.container--trading {
+  width: 980px; }
+
+.trading__coin {
+  margin-top: 120px;
+  height: 150px;
+  background: url("../img/coin.png") no-repeat top; }
