--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -1,8 +1,20 @@
 .crypto {
+  position: relative;
   min-height: 635px;
   background: #000 url("../img/crypto-bg.png") no-repeat bottom;
   background-size: cover;
   border-bottom: 10px solid #e94444;
+  
+  &::after {
+    content: "";
+    width: 600px;
+    height: 830px;
+    top: 250px;
+    left: 100px;
+    position: absolute;
+    background: url("../img/phone.png") no-repeat;
+    background-size: cover;
+  }
   
   & h1 {
     padding: 10px 0;
