--- a/assets/templates/crypto-b/sass/blocks/coin.scss
+++ b/assets/templates/crypto-b/sass/blocks/coin.scss
@@ -1,4 +1,5 @@
 .coin {
   min-height: 140px;
-  background: url("../img/bit.png");
+  background: url("../img/bit.png") no-repeat center;
+  background-size: cover;
 }
