--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -16,10 +16,18 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a href="#">
-                <img src="img/logo.png" alt="CryptoLogic">
+                <img class="page-header__logo-b" src="img/logo.png" alt="CryptoLogic">
+                <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic">
               </a>
             </div>
             <div class="page-header__main-nav">
+              <ul class="page-header__nav-list">
+                <li class="page-header__item"><a href="#">Login</a></li>
+                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="#">Live Chat</a></li>
+              </ul>
+            </div>
+            <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="#">Login</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
