--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -66,3 +66,57 @@
   display: flex;
   flex-direction: column;
 }
+
+// Media
+/* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  .crypto {
+    min-height: 550px;
+    
+    &::after {
+      display: none;
+    }
+    
+    & h1 {
+      margin-top: 40px;
+      color: $w;
+      font-size: 40px;
+      background: transparent;
+    }
+    
+    & p {
+      align-self: center;
+      width: 100%;
+      font-size: 20px;
+      text-align: center;
+    }
+    
+    & a {
+      align-self: center;
+      margin-top: 50px;
+      color: #000;
+      font-size: 25px;
+    }
+  }
+  
+  .container--crypto {
+    width: 95%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
