--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -36,3 +36,56 @@
   height: 150px;
   background: url("../img/coin.png") no-repeat top;
 }
+
+// Media
+/* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  .trading {
+    min-height: 520px;
+    background: #00aeef;
+    
+    & h2 {
+      margin-top: 40px;
+      margin-bottom: 0;
+    }
+    
+    & p {
+      width: 100%;
+      font-size: 20px;
+    }
+  }
+  
+  .trading__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .container--trading {
+    width: 95%;
+  }
+  
+  .trading__coin {
+    width: 95%;
+    height: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background: url("../img/coin-s.png") no-repeat center;
+    background-size: contain;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
