--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -120,7 +120,68 @@ form p {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top: 30px; } }
+    margin-top: 30px; }
+  input {
+    width: 85%;
+    height: 30px;
+    margin-bottom: 15px;
+    padding: 0 20px;
+    font-size: 16px; } }
+
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .page-header__form {
+    margin-top: 30px; }
+  form {
+    padding: 20px 10px; }
+  input {
+    width: 60%;
+    height: 30px;
+    margin-bottom: 15px;
+    padding: 0 20px;
+    font-size: 16px; }
+  input::-webkit-input-placeholder {
+    font-size: 13px; }
+  input:-ms-input-placeholder {
+    font-size: 13px; }
+  input::-ms-input-placeholder {
+    font-size: 13px; }
+  input::placeholder {
+    font-size: 13px; }
+  input[type="checkbox"] {
+    width: 15px; }
+  input[type="submit"] {
+    margin: 0 auto;
+    margin-bottom: 10px;
+    padding-left: 8px;
+    color: #070055;
+    font-size: 18px;
+    text-transform: uppercase;
+    background: rgba(255, 255, 255, 0.6);
+    border: 2px solid #070055;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  input[type="submit"]:hover {
+    color: #fff;
+    background: #070055;
+    border: 2px solid #070055; }
+  label {
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer; }
+  select {
+    height: 40px;
+    padding: 1px 20px;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.9);
+    outline: none; }
+  form p {
+    text-align: center; } }
 
 .page-header {
   min-height: 730px;
@@ -192,7 +253,7 @@ form p {
   .container {
     width: 95%; }
   .page-header {
-    min-height: 760px; }
+    min-height: 780px; }
   .page-header__logo {
     margin-top: 20px; }
   .page-header__logo-b {
@@ -201,18 +262,63 @@ form p {
     display: block; }
   .page-header__nav {
     min-height: 125px; }
+  .page-header__item {
+    margin-right: 10px; }
+  .page-header__item a {
+    padding: 5px 10px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    font-style: italic;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
   .page-header__main-nav {
     display: none; }
+  .page-header__nav-list {
+    width: 100%; }
   .page-header__main-nav--s {
     display: block; } }
 
 /* Smartphones (горизонтальная) ----------- */
-@media only screen and (min-width: 321px) {
-  /* стили */ }
-
 /* Smartphones (вертикальная) ----------- */
 @media only screen and (max-width: 320px) {
-  /* стили */ }
+  .page-header__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .container {
+    width: 95%; }
+  .page-header {
+    min-height: 830px; }
+  .page-header__logo {
+    margin-top: 20px; }
+  .page-header__logo-b {
+    display: none; }
+  .page-header__logo-s {
+    display: block; }
+  .page-header__main-nav {
+    display: none; }
+  .page-header__main-nav--s {
+    display: block; }
+  .page-header__nav-list {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%; }
+  .page-header__item {
+    margin-bottom: 30px; } }
 
 /* iPads (вертикальная и горизонтальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -313,7 +419,7 @@ form p {
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .trade {
-    min-height: 380px; }
+    min-height: 220px; }
   .trade__flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -322,6 +428,32 @@ form p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
+  .trade__left-column {
+    font-size: 20px; }
+  .trade__right-column {
+    font-size: 16px; }
+  .trade__left-column,
+  .trade__right-column {
+    text-align: center; } }
+
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .trade {
+    min-height: 340px; }
+  .trade__flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .trade__left-column {
+    font-size: 30px; }
+  .trade__right-column {
+    font-size: 20px;
+    font-weight: normal; }
   .trade__left-column,
   .trade__right-column {
     text-align: center; } }
@@ -342,6 +474,12 @@ form p {
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
+  .edge {
+    display: none; } }
+
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
   .edge {
     display: none; } }
 
@@ -389,6 +527,26 @@ form p {
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .news {
     min-height: 1530px; }
+  .news__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-top: 40px; }
+  .news__left-column,
+  .news__middle-column,
+  .news__right-column {
+    width: 100%;
+    text-align: center; }
+  .news__left-column-second,
+  .news__middle-column-second {
+    margin-bottom: 50px; } }
+
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .news {
+    min-height: 1870px; }
   .news__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -494,6 +652,33 @@ form p {
   .container--crypto {
     width: 95%; } }
 
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .crypto {
+    min-height: 550px; }
+    .crypto::after {
+      display: none; }
+    .crypto h1 {
+      margin-top: 40px;
+      color: #fff;
+      font-size: 40px;
+      background: transparent; }
+    .crypto p {
+      -ms-flex-item-align: center;
+      align-self: center;
+      width: 100%;
+      font-size: 20px;
+      text-align: center; }
+    .crypto a {
+      -ms-flex-item-align: center;
+      align-self: center;
+      margin-top: 50px;
+      color: #000;
+      font-size: 18px; }
+  .container--crypto {
+    width: 95%; } }
+
 .trading {
   min-height: 600px;
   background: url("../img/trading-bg.png") no-repeat top;
@@ -562,6 +747,38 @@ form p {
     background: url("../img/coin-s.png") no-repeat center;
     background-size: contain; } }
 
+/* Smartphones (горизонтальная) ----------- */
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .trading {
+    min-height: 520px;
+    background: #00aeef; }
+    .trading h2 {
+      margin-top: 30px;
+      margin-bottom: 0;
+      font-size: 30px; }
+    .trading p {
+      width: 100%;
+      font-size: 20px;
+      text-align: left; }
+  .trading__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .container--trading {
+    width: 95%; }
+  .trading__coin {
+    width: 95%;
+    height: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background: url("../img/coin-s.png") no-repeat center;
+    background-size: contain; } }
+
 .coin {
   min-height: 140px;
   background: url("../img/bit.png") no-repeat center;
@@ -578,6 +795,8 @@ form p {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   padding-top: 65px; }
 
 .page-footer__column b {
