--- a/assets/templates/crypto-b/sass/blocks/news.scss
+++ b/assets/templates/crypto-b/sass/blocks/news.scss
@@ -68,7 +68,32 @@
   }
 }
 
+/* Smartphones (горизонтальная) ----------- */
+@media only screen and (min-width: 321px) {}
 
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .news {
+    min-height: 1870px;
+  }
+  
+  .news__flex {
+    flex-direction: column;
+    padding-top: 40px;
+  }
+  
+  .news__left-column,
+  .news__middle-column,
+  .news__right-column {
+    width: 100%;
+    text-align: center;
+  }
+  
+  .news__left-column-second,
+  .news__middle-column-second {
+    margin-bottom: 50px;
+  }
+}
 
 
 
