--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -70,7 +70,7 @@
   }
   
   .page-header {
-    min-height: 760px;
+    min-height: 780px;
   }
   
   // Menu
@@ -90,8 +90,29 @@
     min-height: 125px;
   }
   
+  .page-header__item {
+    margin-right: 10px;
+  }
+  
+  .page-header__item a {
+    padding: 5px 10px;
+    color: $w;
+    font-size: 16px;
+    font-weight: bold;
+    font-style: italic;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 2px solid $w;
+    border-radius: 5px;
+    transition: 0.3s;
+  }
+  
   .page-header__main-nav {
     display: none;
+  }
+  
+  .page-header__nav-list {
+    width: 100%;
   }
   
   .page-header__main-nav--s {
@@ -100,13 +121,53 @@
 }
 
 /* Smartphones (горизонтальная) ----------- */
-@media only screen and (min-width: 321px) {
-/* стили */
-}
+@media only screen and (min-width: 321px) {}
 
 /* Smartphones (вертикальная) ----------- */
-@media only screen and (max-width: 320px) {
-/* стили */
+@media only screen and (max-width: 320px) {  
+  .page-header__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .container {
+    width: 95%;
+  }
+  
+  .page-header {
+    min-height: 830px;
+  }
+  
+  // Menu
+  .page-header__logo {
+    margin-top: 20px;
+  }
+  
+  .page-header__logo-b {
+    display: none;
+  }
+  
+  .page-header__logo-s {
+    display: block;
+  }
+  
+  .page-header__main-nav {
+    display: none;
+  }
+  
+  .page-header__main-nav--s {
+    display: block;
+  }
+  
+  .page-header__nav-list {
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .page-header__item {
+    margin-bottom: 30px;
+  }
 }
 
 /* iPads (вертикальная и горизонтальная) ----------- */
