--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -74,8 +74,46 @@
   }
 }
 
+/* Smartphones (горизонтальная) ----------- */
+@media only screen and (min-width: 321px) {}
 
-
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+  .trading {
+    min-height: 520px;
+    background: #00aeef;
+    
+    & h2 {
+      margin-top: 30px;
+      margin-bottom: 0;
+      font-size: 30px;
+    }
+    
+    & p {
+      width: 100%;
+      font-size: 20px;
+      text-align: left;
+    }
+  }
+  
+  .trading__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .container--trading {
+    width: 95%;
+  }
+  
+  .trading__coin {
+    width: 95%;
+    height: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background: url("../img/coin-s.png") no-repeat center;
+    background-size: contain;
+  }
+}
 
 
 
